--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
       - 4200:4200
     environment:
       - MCP_AUTH_TOKEN=pls-change-me
-      - LANG=C.UTF-8
-      - LC_ALL=C.UTF-8
+      - LANG=en_US.UTF-8
+      - LC_ALL=en_US.UTF-8
       - PYTHONIOENCODING=utf-8
+      - PYTHONUNBUFFERED=1
     volumes:
       - ./data:/app/data
     restart: always
